[package]
name = "axon"
version = "0.1.0"
edition = "2021"
authors = ["mm-goli1386"]
description = "High-performance Matrix homeserver written in Rust"
license = "AGPL-3.0-only"
repository = "https://github.com/mm-goli1386/Axon"
readme = "README.md"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "sqlite",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.23"

# CLI
clap = { version = "4", features = ["derive"] }

# Cryptography
ring = "0.17"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"

# Caching
lru = "0.12"
moka = { version = "0.12", features = ["future"] }

# Utilities
regex = "1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Performance
ahash = "0.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
tokio-test = "0.4"

[[bench]]
name = "state_resolution"
harness = false

[[bench]]
name = "event_signing"
harness = false

[[bench]]
name = "push_evaluation"
harness = false

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
